# Custom-Task-Manager

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTMSettings.ini  LICENSE  README.md  imgui.ini  main.cpp
CTMBackend/: ctm_app.cpp  ctm_app.h  ctm_app_content.cpp  ctm_app_content.h  ctm_base_state.h  ctm_constants.h  ctm_logger.h  ctm_misc.cpp  ctm_misc.h  ctm_process_menu.cpp  ctm_process_menu.h  ctm_state_manager.cpp  ctm_state_manager.h  ctm_udp_event_listener.cpp  ctm_udp_event_listener.h
CTMBackend/CTMGlobalManagers/: ctm_critical_resource_guard.cpp  ctm_critical_resource_guard.h  ctm_state_manager.cpp  ctm_state_manager.h  ctm_winsock_manager.cpp  ctm_winsock_manager.h  ctm_wmi_manager.cpp  ctm_wmi_manager.h
CTMBackend/CTMPerformanceScreen/: ctm_perf_common.cpp  ctm_perf_common.h  ctm_perf_graph.cpp  ctm_perf_graph.h  ctm_perf_screen.cpp  ctm_perf_screen.h
CTMBackend/CTMPerformanceScreen/CTMPerformanceCPUScreen/: ctm_perf_cpu_screen.cpp  ctm_perf_cpu_screen.h
CTMBackend/CTMProcessMenu/: ctm_process_menu.cpp  ctm_process_menu.h  ctm_process_menu_etw.cpp  ctm_process_menu_etw.h
CTMBackend/CTMProcessScreen/: ctm_process_screen.cpp  ctm_process_screen.h  ctm_process_screen_etw.cpp  ctm_process_screen_etw.h
CTMBackend/CTMPureHeaderFiles/: ctm_constants.h  ctm_logger.h
CTMBackend/CTMSettingsMenu/: ctm_settings_menu.cpp  ctm_settings_menu.h
CTMBackend/CTMSettingsScreen/: ctm_settings_screen.cpp  ctm_settings_screen.h
CTMBackend/CTMStartupAppsScreen/: ctm_startup_apps_screen.cpp  ctm_startup_apps_screen.h
(+6 files in other folders)
